disabled links, page nf, fixed z-index

--- a/src/assets/styles/mixins/link-mixins.sass
+++ b/src/assets/styles/mixins/link-mixins.sass
@@ -31,3 +31,7 @@
     display: block
   &:hover
     @include active-link
+
+@mixin disabled-link
+  opacity: 0.3
+  pointer-events: none
