--- a/src/components/Admin/AdminUsers/admin-users.module.sass
+++ b/src/components/Admin/AdminUsers/admin-users.module.sass
@@ -3,6 +3,13 @@
 .userHeadCell
   min-width: 150px
 
+
+.userHeadCell__block
+  z-index: 1
+
+.toggle
+  z-index: 0
+
 .usersRow
   transition: all 0.15s
 
