--- a/src/components/layout/header/index.module.sass
+++ b/src/components/layout/header/index.module.sass
@@ -41,6 +41,9 @@
 .header__link:hover
   opacity: 0.8
 
+.header__link_disabled
+  @include disabled-link
+
 .header__icon
   display: flex
   justify-content: center
