--- a/src/components/ui/navLink/nav-link.module.sass
+++ b/src/components/ui/navLink/nav-link.module.sass
@@ -61,3 +61,6 @@
 .navLink_active:hover
   .navIcon
     transform: scale(1.4)
+
+.navLink_disabled
+  @include disabled-link
